raul (0.8.10) unstable;

  * Add INSTALL file
  * Add ThreadVar, a thread-specific variable class
  * Add managed_ptr for automatic real-time safe garbage collection
  * Fix semaphore with initial count on Darwin
  * Implement Semaphore for Windows
  * Improve RingBuffer
  * Improve test suite
  * Remove OSC and RDF library dependent code
  * Remove TimeSlice and TimeStamp
  * Remove URI class
  * Remove boost dependency
  * Remove features now provided by C++11
  * Remove glib dpendency
  * Remove remaining library code, now header only
  * Remove several questionable classes
  * Update license to GPL3+

 -- David Robillard <d@drobilla.net>  Sat, 02 Jan 2021 14:42:30 +0000

raul (0.8.0) stable;

  * Add all classes to 'raul' doxygen group
  * Add missing #includes
  * Add missing COPYING file to distribution
  * Better documentation generation via waf tool
  * Fix TimeStamp comparison operators
  * Fix accidental build system dependency on glibmm (now glib only)
  * Fix crash bug in List::chop_front
  * Fix incorrect TimeSlice::beats_to_ticks
  * Fix off-by-one allocation of Atom strings
  * Implement Semaphore for Darwin
  * Make single-argument constructors explicit
  * Remove "using namespace" declarations
  * Remove pointless templateification of RingBuffer
  * Remove unused/trivial/inappropriate Command and Stateful
  * Rename LOG_* defines RAUL_LOG_*
  * Upgrade to waf 1.6.2
  * Use uint32_t consistently for sizes in RingBuffer

 -- David Robillard <d@drobilla.net>  Tue, 11 Jan 2011 22:42:07 +0000

raul (0.7.0) stable;

  * Add Configuration class for app command line option handling
  * Add IntrusivePtr, a trivial #define of boost::intrusive_ptr which is
    useful for hard realtime things (since adding and dropping refs is
    realtime safe, which is not true of shared_ptr)
  * Add several unit tests
  * Atom updates, including new "Blank" Atom for storing dictionaries with URI
    keys (ala JavaScript "objects", but RDF compatible)